--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "classnames": "^2.2.5",
     "moment": "^2.20.1",
     "react-datetime": "^2.11.1",
+    "react-draggable": "^3.0.5",
     "react-input-range": "^1.2.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
