--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "bufferutil": "3.0.3",
     "classnames": "^2.2.5",
     "moment": "^2.20.1",
+    "re-resizable": "^4.3.1",
     "react-datetime": "^2.11.1",
     "react-draggable": "^3.0.5",
+    "react-grid-layout": "^0.16.2",
     "react-input-range": "^1.2.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
